--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -8,6 +8,7 @@
   --border-radius: 0.25rem;
   --min-tap-size: 2.75rem;
 
+  --z-index-table: 4;
   --z-index-dropdown: 5;
   --z-index-header: 6;
   --z-index-modal: 7;
